--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "supertest": "^3.0.0"
   },
   "devDependencies": {
+    "babel-eslint": "^7.2.3",
     "babel-istanbul": "^0.12.2",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.6.0",
