--- a/package.json
+++ b/package.json
@@ -4,20 +4,24 @@
   "description": "Library management",
   "main": "index.js",
   "scripts": {
-    "test": "babel-node",
+    "start:dev": "./node_modules/.bin/nodemon ./server/bin/www.js",
+    "test": "babel-node NODE_ENV=test mocha",
     "lint": "eslint ./server/*.js --fix",
-    "start": "nodemon ./server/index.js --exec babel-node --presets es2015,stage-2"
+    "start": "nodemon ./server/app.js --exec babel-node --presets es2015,stage-2"
   },
   "dependencies": {
     "babel-cli": "^6.24.1",
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
-    "express": "^4.15.3",
     "dotenv": "^4.0.0",
+    "express": "^4.15.3",
     "morgan": "^1.8.2",
+    "pg": "^7.0.2",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.4.2",
     "supertest": "^3.0.0"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.3",
     "babel-istanbul": "^0.12.2",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.6.0",
