--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -193,7 +193,7 @@ rules:
   semi-spacing: error
   semi-style: error
   sort-imports: error
-  sort-keys: error
+  sort-keys: 0
   sort-vars: error
   space-before-blocks: error
   space-before-function-paren: error
