--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "mocha": "^3.5.0",
     "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.11.0",
-    "nyc": "^11.1.0"
+    "nyc": "^11.1.0",
+    "request": "^2.81.0",
+    "should": "^11.2.1"
   },
   "repository": {
     "type": "git",
