--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -102,7 +102,7 @@ rules:
   no-lone-blocks: error
   no-lonely-if: error
   no-loop-func: error
-  no-magic-numbers: error
+  no-magic-numbers: 0
   no-mixed-operators: error
   no-mixed-requires: error
   no-multi-assign: error
@@ -164,7 +164,7 @@ rules:
   no-whitespace-before-property: error
   no-with: error
   nonblock-statement-body-position: error
-  object-curly-newline: error
+  object-curly-newline: 0
   object-curly-spacing: error
   object-property-newline: error
   object-shorthand: error
