--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
     "cool-ascii-faces": "1.3.4",
