--- a/package.json
+++ b/package.json
@@ -13,6 +13,13 @@
     "start": "babel-node ./server/app.js --exec babel-node --presets es2015,stage-2"
   },
   "dependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-istanbul": "^0.12.2",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.24.1",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
     "cool-ascii-faces": "1.3.4",
