--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start:dev": "./node_modules/.bin/nodemon ./server/app.js",
     "lint": "eslint ./server/*.js --fix",
-    "test": "NODE_ENV=test mocha test/* --compilers js:babel-register",
+    "test": "NODE_ENV=test mocha ./server/test/test --compilers js:babel-register",
     "heroku-postbuild": "NODE_ENV=production && npm run build && NODE_END=production sequelize db:migrate:undo:all && NODE_END=production sequelize db:migrate",
     "db:seed": "DATABASE_URL=postgres://jgqzyhsxdurssn:17575264ada36f80b6c599d4dd9c222772d7830ba941aabf3b17c7ea0296dd67@ec2-107-22-160-199.compute-1.amazonaws.com:5432/daj4r6d59jfm08 sequelize db:seed:all",
     "db:migrate": "cross-env DATABASE_URL=postgres://jgqzyhsxdurssn:17575264ada36f80b6c599d4dd9c222772d7830ba941aabf3b17c7ea0296dd67@ec2-107-22-160-199.compute-1.amazonaws.com:5432/daj4r6d59jfm08 sequelize db:migrate",
