--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "lint": "eslint ./server/*.js --fix",
     "test": "NODE_ENV=test mocha ./server/test/test --compilers js:babel-register",
     "heroku-postbuild": "NODE_ENV=production && npm run build && NODE_END=production sequelize db:migrate:undo:all && NODE_END=production sequelize db:migrate",
-    "db:seed": "DATABASE_URL=postgres://jgqzyhsxdurssn:17575264ada36f80b6c599d4dd9c222772d7830ba941aabf3b17c7ea0296dd67@ec2-107-22-160-199.compute-1.amazonaws.com:5432/daj4r6d59jfm08 sequelize db:seed:all",
-    "db:migrate": "cross-env DATABASE_URL=postgres://jgqzyhsxdurssn:17575264ada36f80b6c599d4dd9c222772d7830ba941aabf3b17c7ea0296dd67@ec2-107-22-160-199.compute-1.amazonaws.com:5432/daj4r6d59jfm08 sequelize db:migrate",
+    "db:seed": "DATABASE_URL=postgres://cfthyiwa:KyGJVxFyR0MM15JQRG8fFHup85r0vgoQ@stampy.db.elephantsql.com:5432/cfthyiwa sequelize db:seed:all",
+    "db:migrate": "cross-env DATABASE_URL=postgres://cfthyiwa:KyGJVxFyR0MM15JQRG8fFHup85r0vgoQ@stampy.db.elephantsql.com:5432/cfthyiwa sequelize db:migrate",
     "start": "babel-node ./server/app.js --exec babel-node --presets es2015,stage-2"
   },
   "dependencies": {
