--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node": "8.2.1"
   },
   "scripts": {
-    "start:dev": "./node_modules/.bin/nodemon ./server/app.js",
+    
+    "start:dev": "nodemon ./server/app.js --exec babel-node --presets es2015,stage-2",
     "lint": "eslint ./server/*.js --fix",
     "test": "NODE_ENV=test mocha ./server/test/test --compilers js:babel-register",
     "heroku-postbuild": "NODE_ENV=production && npm run build && NODE_END=production sequelize db:migrate:undo:all && NODE_END=production sequelize db:migrate",
