--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "node": "8.2.1"
   },
   "scripts": {
-    
     "start:dev": "nodemon ./server/app.js --exec babel-node --presets es2015,stage-2",
     "lint": "eslint ./server/*.js --fix",
     "test": "NODE_ENV=test mocha ./server/test/test --compilers js:babel-register",
@@ -18,15 +17,20 @@
   },
   "dependencies": {
     "babel-cli": "^6.24.1",
+    "babel-core": "^6.26.0",
     "babel-istanbul": "^0.12.2",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.24.1",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
     "cool-ascii-faces": "1.3.4",
+    "css-loader": "^0.28.7",
     "dotenv": "^4.0.0",
     "ejs": "2.5.6",
     "express": "^4.15.3",
@@ -34,9 +38,18 @@
     "morgan": "^1.8.2",
     "pg": "^7.0.2",
     "pg-hstore": "^2.3.2",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-materialize": "^1.0.13",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.2.0",
     "sequelize": "^4.4.2",
     "sequelize-cli": "^2.8.0",
-    "supertest": "^3.0.0"
+    "supertest": "^3.0.0",
+    "webpack": "^3.6.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
