--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start:dev": "nodemon ./server/app.js --exec babel-node --presets es2015,stage-2",
     "lint": "eslint ./server/*.js --fix",
-    "test": "NODE_ENV=test mocha ./server/test/test --compilers js:babel-register",
+    "test": "NODE_ENV=test mocha babel-node ./server/test/test --exec babel-node --presets es2015,stage-2",
     "heroku-postbuild": "NODE_ENV=production && npm run build && NODE_END=production sequelize db:migrate:undo:all && NODE_END=production sequelize db:migrate",
     "db:seed": "DATABASE_URL=postgres://cfthyiwa:KyGJVxFyR0MM15JQRG8fFHup85r0vgoQ@stampy.db.elephantsql.com:5432/cfthyiwa sequelize db:seed:all",
     "db:migrate": "cross-env DATABASE_URL=postgres://cfthyiwa:KyGJVxFyR0MM15JQRG8fFHup85r0vgoQ@stampy.db.elephantsql.com:5432/cfthyiwa sequelize db:migrate",
